# TChem-atm

./: .gitmodules  404.html  AUTHORS  CITATION.cff  CITATIONS.bib  Dockerfile  LICENSE  README.md  build_script.sh  codecov.yml  index.html  mkdocs.yml  third_party_software_licenses_and_copyright_notices  tpls_bld.sh
src/: CMakeLists.txt  FindOLDSkywalker.cmake  Findskywalker.cmake
src/cmake/: TChem_atm_Config.cmake.in
src/cmake/modules/: FindSUNDIALS.cmake
src/core/: CMakeLists.txt  TChem.hpp  TChem_AerosolChemistry.cpp  TChem_AerosolChemistry.hpp  TChem_AerosolChemistry_CVODE.cpp  TChem_AerosolChemistry_CVODE.hpp  TChem_AerosolChemistry_CVODE_RHS_Jacobian.cpp  TChem_AerosolChemistry_CVODE_RHS_Jacobian.hpp  TChem_AerosolChemistry_KokkosKernels.cpp  TChem_AerosolChemistry_KokkosKernels.hpp  TChem_AerosolModelData.cpp  TChem_AerosolModelData.hpp  TChem_AtmosphericChemistry.cpp  TChem_AtmosphericChemistry.hpp  TChem_AtmosphericChemistryE3SM.cpp  TChem_AtmosphericChemistryE3SM.hpp  TChem_AtmosphericChemistryE3SM_CVODE.cpp  TChem_AtmosphericChemistryE3SM_CVODE.hpp  TChem_AtmosphericChemistryE3SM_ExplicitEuler.cpp  TChem_AtmosphericChemistryE3SM_ExplicitEuler.hpp  TChem_AtmosphericChemistryE3SM_ImplicitEuler.cpp  TChem_AtmosphericChemistryE3SM_ImplicitEuler.hpp  TChem_CommandLineParser.hpp  TChem_Driver.cpp  TChem_Driver.hpp  TChem_DriverModule.F90  TChem_KineticModelData.cpp  TChem_KineticModelData.hpp  TChem_KineticModelNCAR_ConstData.hpp  TChem_NetProductionRates.cpp  TChem_NetProductionRates.hpp  TChem_RateofProgress.cpp  TChem_RateofProgress.hpp  TChem_ReactionRates.cpp  TChem_ReactionRates.hpp  TChem_ReactionTypes.hpp  TChem_Util.hpp  TChem_atm_Config.hpp.in
src/core/impl/: TChem_Impl_AdjustReactions.hpp  TChem_Impl_Aerosol_RHS.hpp  TChem_Impl_AtmosphericChemistry_Problem.hpp  TChem_Impl_KForward.hpp  TChem_Impl_KForwardAerosol.hpp  TChem_Impl_KForwardJPL.hpp  TChem_Impl_MESA.hpp  TChem_Impl_MOSAIC.hpp  TChem_Impl_NetProductionRates.hpp  TChem_Impl_RateofProgress.hpp  TChem_Impl_ReactionRates.hpp  TChem_Impl_ReactionRatesAerosol.hpp  TChem_Impl_SIMPOL_constant.hpp  TChem_Impl_SIMPOL_phase_transfer.hpp  TChem_Impl_SingleParticleAerosolWater.hpp  TChem_Impl_SingleParticleUtils.hpp  TChem_Impl_TimeIntegratorExplicitEuler.hpp  TChem_Impl_TimeIntegratorImplicitEuler.hpp  TChem_Impl_ToyProcess.hpp
src/core/problems/: TChem_Impl_AerosolChemistry.hpp  TChem_Impl_AerosolChemistry_CVODE.hpp  TChem_Impl_AerosolChemistry_KokkosKernels.hpp  TChem_Impl_AerosolChemistry_Problem.hpp  TChem_Impl_AtmosphericChemistry.hpp  TChem_Impl_AtmosphericChemistryE3SM.hpp  TChem_Impl_AtmosphericChemistryE3SM_CVODE.hpp  TChem_Impl_AtmosphericChemistryE3SM_Problem.hpp  TChem_Impl_AtmosphericChemistry_Problem.hpp  save.pth
src/core/save/: TChem_AtmosphericChemistryE3SM_JacobianFwd.cpp  TChem_AtmosphericChemistryE3SM_JacobianFwd.hpp
src/core/strat_chem_solve/: TChem_Linv3StratosphereSolver.cpp  TChem_Linv3StratosphereSolver.hpp
src/core/strat_chem_solve/impl/: TChem_Impl_linv3_strat_chem_solve.hpp
src/examples/: CMakeLists.txt  TChem_AerosolChemistry.cpp  TChem_AerosolChemistry_CVODE.cpp  TChem_AerosolChemistry_CVODE_K.cpp  TChem_AerosolChemistry_KokkosKernels.cpp  TChem_AerosolChemistry_RHSs.cpp  TChem_ArrowSolver.cpp  TChem_AtmosphericChemistry.cpp  TChem_AtmosphericChemistryE3SM.cpp  TChem_AtmosphericChemistryE3SM_CVODE.cpp  TChem_CVODE_Aerosol.cpp  TChem_GEMM_KokkosKernels.cpp  TChem_GasChemistry_RHSs.cpp  TChem_Linozv3_StratosphereChemSolver.cpp  TChem_NetProductionRatePerMassNCAR.cpp  TChem_NetProductionRates.cpp  TChem_RateofProgress.cpp  TChem_ReactionRates.cpp  TChem_SIMPOL.cpp  TChem_SIMPOL_RHS.cpp  TChem_SIMPOL_RHS_Host.cpp  TChem_SIMPOL_RHS_HostSacado.cpp  TChem_ZSR.cpp
src/examples/verification-mesa/: adjust_solid_aerosol_input_ts_0.yaml  adjust_solid_aerosol_output_ts_0.py
src/unit-tests/: CMakeLists.txt  TChem_Test_AerosolWater.cpp  TChem_Test_AerosolWater.hpp  TChem_Test_AtmosphericChemistryE3SM.hpp  TChem_Test_Driver.cpp  TChem_Test_KokkosKernelsODE.cpp  TChem_Test_MESA.cpp  TChem_Test_MESA.hpp  TChem_Test_MOSAIC.cpp  TChem_Test_MOSAIC.hpp  TChem_Test_NetProductionRates.hpp  TChem_Test_RateofProgress.hpp  TChem_Test_ReactionRates.hpp  TChem_Test_Simpol_RHS.cpp  TChem_Test_Simpol_RHS.hpp  TChem_Test_Simpol_RHS_Host.hpp  TChem_Test_ToyProcess.cpp  TChem_Test_ToyProcess.hpp
src/unit-tests/CB05CL_AE5/: CMakeLists.txt
src/unit-tests/CB05CL_AE5/references/: full_gas.hdf5
src/unit-tests/KokkosKernelsODE/: CMakeLists.txt
src/unit-tests/KokkosKernelsODE/references/: batched_cb_full_gas.hdf5  batched_full_gas.hdf5  full_gas.hdf5
src/unit-tests/TChem_Driver/: CMakeLists.txt  TChem_Driver.c  compare_files.py  config_aero.yaml  config_gas.yaml  config_solver.yaml
src/unit-tests/TChem_Driver/references/: aero_species_props_ref.txt  gas_species_names_ref.txt  (+3 more)
src/unit-tests/TinesODE/: CMakeLists.txt
src/unit-tests/junk/: TChem_Test_KokkosKernelsODE.cpp
src/unit-tests/scripts/: compare_files.py  compare_tchem.py  compare_tchem_hdf5.py  make_hdf5_ref.py
src/verification/: CMakeLists.txt  verification.cpp  verification.hpp
src/verification/linozv3/: CMakeLists.txt  TChem_Linozv3_StratosphereChemSolver.cpp
src/verification/mesa/: CMakeLists.txt  adjust_solid_aerosol.cpp  mesa_driver.cpp
src/verification/mosaic/: CMakeLists.txt  MTEM_compute_log_gamZ.cpp  absorb_tiny_nh4cl.cpp  absorb_tiny_nh4no3.cpp  adjust_liquid_aerosol.cpp  adjust_solid_aerosol.cpp  aerosol_water.cpp  aerosol_water_up.cpp  bin_molality.cpp  bin_molality_60.cpp  calculate_XT.cpp  check_aerosol_mass.cpp  compute_activities.cpp  conform_electrolytes.cpp  degas_hcl.cpp  degas_hno3.cpp  degas_nh3.cpp  do_full_deliquescence.cpp  drh_mutual.cpp  electrolytes_to_ions.cpp  fn_Keq.cpp  fn_Po.cpp  fnlog_gamZ.cpp  form_cacl2.cpp  form_caco3.cpp  form_camsa2.cpp  form_cano3.cpp  form_caso4.cpp  form_electrolytes.cpp  form_h2so4.cpp  form_hcl.cpp  form_hno3.cpp  form_lvcite_nh4hso4.cpp  form_msa.cpp  form_na2so4.cpp  form_na2so4_nahso4.cpp  form_nacl.cpp  form_nahso4.cpp  form_namsa.cpp  form_nano3.cpp  (+14 more)
(+345 files in other folders)
