# Empty list
SET(TCHEM_ATM_EXAMPLE_SOURCES "")

# Append examples that work for all device types
LIST(APPEND TCHEM_ATM_EXAMPLE_SOURCES
  TChem_AtmosphericChemistry.cpp
  TChem_AtmosphericChemistryE3SM.cpp
  TChem_NetProductionRatePerMassNCAR.cpp
  TChem_ReactionRates.cpp
  TChem_NetProductionRates.cpp
  TChem_RateofProgress.cpp
  TChem_Linozv3_StratosphereChemSolver.cpp
  TChem_AtmosphericChemistryE3SM_CVODE.cpp
  TChem_AerosolChemistry_CVODE.cpp
)
IF(TCHEM_ATM_ENABLE_TPL_KOKKOSKERNELS)
LIST(APPEND TCHEM_ATM_EXAMPLE_SOURCES
TChem_GEMM_KokkosKernels.cpp
)
ENDIF()
#
# Create examples for the above sources
#
FOREACH(TCHEM_ATM_EXAMPLE_SOURCE ${TCHEM_ATM_EXAMPLE_SOURCES} )
  STRING( REPLACE ".cpp" ".x" TCHEM_ATM_EXAMPLE_EXE ${TCHEM_ATM_EXAMPLE_SOURCE} )
  ADD_EXECUTABLE(${TCHEM_ATM_EXAMPLE_EXE} ${TCHEM_ATM_EXAMPLE_SOURCE})
  TARGET_LINK_LIBRARIES(${TCHEM_ATM_EXAMPLE_EXE} ${TCHEM_ATM_LINK_LIBRARIES})
  IF(TCHEM_ATM_ENABLE_INSTALL)
    INSTALL(TARGETS ${TCHEM_ATM_EXAMPLE_EXE}
          PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
          DESTINATION "${CMAKE_INSTALL_PREFIX}/${TCHEM_ATM_INSTALL_EXAMPLE_PATH}")
  ENDIF()
ENDFOREACH()


# runs directory
FILE(COPY runs
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
     FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)

INSTALL(DIRECTORY runs
        DESTINATION ${CMAKE_INSTALL_PREFIX}/examples
        FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)


SET(TCHEM_ATM_EXAMPLE_EXE TChem_AtmosphericChemistryE3SM.explicit_euler.x)
SET(TCHEM_ATM_EXAMPLE_SOURCE TChem_AtmosphericChemistryE3SM.cpp)
STRING( REPLACE ".cpp" ".explicit_euler.x" TINES_EXAMPLE_EXE ${TCHEM_ATM_EXAMPLE_SOURCE} )
ADD_EXECUTABLE(${TCHEM_ATM_EXAMPLE_EXE} ${TCHEM_ATM_EXAMPLE_SOURCE})
SET_TARGET_PROPERTIES(${TCHEM_ATM_EXAMPLE_EXE} PROPERTIES COMPILE_FLAGS "-DTCHEM_ATM_ENABLE_EXPLICIT_EULER")
TARGET_LINK_LIBRARIES(${TCHEM_ATM_EXAMPLE_EXE} ${TCHEM_ATM_LINK_LIBRARIES})
INSTALL(TARGETS ${TCHEM_ATM_EXAMPLE_EXE}
          PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
          DESTINATION "${CMAKE_INSTALL_PREFIX}/${TCHEM_ATM_INSTALL_EXAMPLE_PATH}")

SET(TCHEM_ATM_EXAMPLE_EXE TChem_AtmosphericChemistryE3SM.implicit_euler.x)
SET(TCHEM_ATM_EXAMPLE_SOURCE TChem_AtmosphericChemistryE3SM.cpp)
STRING( REPLACE ".cpp" ".implicit_euler.x" TINES_EXAMPLE_EXE ${TCHEM_ATM_EXAMPLE_SOURCE} )
ADD_EXECUTABLE(${TCHEM_ATM_EXAMPLE_EXE} ${TCHEM_ATM_EXAMPLE_SOURCE})
SET_TARGET_PROPERTIES(${TCHEM_ATM_EXAMPLE_EXE} PROPERTIES COMPILE_FLAGS "-DTCHEM_ATM_ENABLE_IMPLICIT_EULER")
TARGET_LINK_LIBRARIES(${TCHEM_ATM_EXAMPLE_EXE} ${TCHEM_ATM_LINK_LIBRARIES})
INSTALL(TARGETS ${TCHEM_ATM_EXAMPLE_EXE}
          PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
          DESTINATION "${CMAKE_INSTALL_PREFIX}/${TCHEM_ATM_INSTALL_EXAMPLE_PATH}")
