#
SET(TCHEM_ATM_TEST_SOURCES "")

# Append examples that work for all device types
LIST(APPEND TCHEM_ATM_TEST_SOURCES
     TChem_Test_Driver.cpp
     TChem_Test_Simpol_RHS.cpp
     TChem_Test_MOSAIC.cpp
    )

FOREACH(TCHEM_ATM_TEST_SOURCES ${TCHEM_ATM_TEST_SOURCES} )
  STRING( REPLACE ".cpp" ".x" TCHEM_ATM_TEST_EXE ${TCHEM_ATM_TEST_SOURCES} )
  STRING( REPLACE ".cpp" "" TCHEM_ATM_TEST_NAME ${TCHEM_ATM_TEST_SOURCES} )
  ADD_EXECUTABLE(${TCHEM_ATM_TEST_EXE} ${TCHEM_ATM_TEST_SOURCES})
  TARGET_LINK_LIBRARIES(${TCHEM_ATM_TEST_EXE} ${TCHEM_ATM_LINK_LIBRARIES})
  INSTALL(TARGETS ${TCHEM_ATM_TEST_EXE}
        PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
        DESTINATION "${CMAKE_INSTALL_PREFIX}/${TCHEM_ATM_INSTALL_TEST_PATH}")

  ADD_TEST(${TCHEM_ATM_TEST_NAME} ${TCHEM_ATM_TEST_EXE})
ENDFOREACH()

FILE(COPY references
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(DIRECTORY references
        DESTINATION ${CMAKE_INSTALL_PREFIX}/unit-tests)

FILE(COPY scripts
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

INSTALL(DIRECTORY scripts
        DESTINATION ${CMAKE_INSTALL_PREFIX}/unit-tests)        


ADD_SUBDIRECTORY(KokkosKernelsODE)
ADD_SUBDIRECTORY(TinesODE)
ADD_SUBDIRECTORY(CB05CL_AE5)
ADD_SUBDIRECTORY(TChem_Driver)
